# fraduated_prj

./: .gitignore  Dockerfile  Jenkinsfile  README.md  conftest.py  pyproject.toml
generator/: generator.py
locators/: element_page_locators.py
pages/: base_page.py  element_page.py  elements_page.py
test/: element_test.py
tests/: README.md  element_test.py
